--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-i18next": "^11.12.0",
+    "react-localize-redux": "^3.5.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "swiper": "^7.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
