--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,5 @@
     "compilerOptions": {
         "jsx": "react"
     },
-    "extends": "expo/tsconfig.base"
+    "extends": "expo/tsconfig.base",
 }
