--- a/resources/config.json
+++ b/resources/config.json
@@ -1,4 +1,6 @@
 {
+    "home": "Главная",
+    "search": "Поиск",
     "leisure": "Развлечения, игры, уроки",
     "movie": "Фильмы, ролики, телепрограммы",
     "music": "Музыка и радио",
@@ -6,5 +8,11 @@
     "reminder": "Напоминания, будильники, таймеры",
     "shop": "Сервисы, покупки, рецепты",
     "speak": "Разговоры с Алисой",
-    "clever": "Умный дом"
+    "clever-home": "Умный дом",
+    "shop-taxi": "Такси",
+    "clever-home-on-off": "Включить или выключить",
+    "clever-home-brightness": "Изменить яркость",
+    "clever-home-color": "Изменить цвет",
+    "clever-home-color-temperature": "Изменить температуру цвета",
+    "clever-home-work-type": "Выбрать режим работы"
 }
