--- a/resources/config.json
+++ b/resources/config.json
@@ -14,5 +14,11 @@
     "clever-home-brightness": "Изменить яркость",
     "clever-home-color": "Изменить цвет",
     "clever-home-color-temperature": "Изменить температуру цвета",
-    "clever-home-work-type": "Выбрать режим работы"
+    "clever-home-work-type": "Выбрать режим работы",
+    "clever-home-delay-command-execution": "Отложить выполнение команды",
+    "clever-home-find-out-the-status-of-the-bulb": "Узнать состояние Лампочки",
+    "clever-home-on-off-tv": "Включить или выключить телевизор, кондиционер, ТВ-приставку или ресивер",
+    "clever-home-operate-conditioner": "Управлять кондиционером",
+    "clever-home-control-tv": "Управлять телевизором, ресивером или ТВ-приставкой",
+    "clever-home-manage-added-device": "Управлять устройством, добавленным через режим обучения"
 }
