--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.4",
     "expo": "~42.0.1",
+    "expo-ads-admob": "~10.1.2",
     "expo-app-loading": "1.1.2",
     "expo-status-bar": "~1.0.4",
     "react": "^17.0.2",
@@ -20,6 +21,7 @@
     "react-i18next": "^11.12.0",
     "react-localize-redux": "^3.5.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-admob": "^2.0.0-beta.6",
     "react-native-fs": "^2.18.0",
     "react-native-inset-shadow": "^1.0.3",
     "react-native-neomorph-shadows": "^1.1.2",
